...
  const router = useRouter();

  const renderUserLikes = ({ item }: { item: LikeUsers }) => {
    return (
      <View style={{ marginBottom: spacing.xs, flex: 1 }}>
        <Button
          testID="user-route"
          onPress={() =>
            router.navigate({
              pathname:
                userId === item.userId
                  ? '/(tabs)/(user)/user'
                  : '/(tabs)/(user)/[userId]',
...

      <Button
        testID="close-button"
        onPress={onDismiss}
        style={{ marginTop: spacing.sm }}
      >
        Close
      </Button>
    </Modal>
  );
}

