...
                  flexDirection: 'row',
                  justifyContent: 'space-between',
                  marginVertical: spacing.sm,
                }}
              >
                <Button
                  testID="follower"
                  mode="contained-tonal"
                  onPress={() => {
                    setIsFollowerModalVisible(true);
                    setIdSwitch('follower');
                  }}
                  style={{
...
              </View>
            </Card.Content>
            <Card.Actions>
              {onSwitch && editOnPress && editMyAccount ? (
                <>
                  <IconButton
                    testID="edit"
                    icon="account-edit"
                    onPress={editMyAccount}
                  />
                  <IconButton
                    testID="write-album"
                    icon="pen"
                    onPress={editOnPress}
                  />
                </>
              ) : (
                followOnPress && (
                  <Button
                    testID="follow-button"
                    onPress={followOnPress}
                    accessibilityState={{ selected: isFollow }}
                    icon={isFollow ? 'account-minus' : 'account-plus-outline'}
                    mode={isFollow ? 'outlined' : 'contained'}
                    style={{
                      borderRadius: components.button.borderRadius,
...
