...
      idSwitch === 'follower' ? item.followerUserId : item.followedUserId;
    const isMyPage = userId === targetUserId;

    return (
      <View style={{ marginBottom: spacing.xs }}>
        <Button
          testID="user-nav"
          onPress={() => {
            onDismiss();
            router.navigate({
              pathname: isMyPage
                ? '/(tabs)/(user)/user'
                : '/(tabs)/(user)/[userId]',
...
