...
                  flexDirection: 'row',
                  alignItems: 'center',
                  marginBottom: spacing.md,
                }}
              >
                <IconButton
                  testID="exit-album"
                  mode="contained-tonal"
                  icon="close-thick"
                  size={30}
                  onPress={handleBack}
                />

...
